<resources>
    <string name="app_name">Cooking Unit Converter</string>
    <string name="value">Value</string>
    <string name="convert_from">Convert from:</string>
    <string name="convert_to">To:</string>
    <string name="round_up_result">Round up result?</string>
    <string name="convert">Convert</string>
    <string-array name="units_array">
        <item>Cups (US)</item>
        <item>Cups (Metric)</item>
        <item>Cups (Imperial)</item>
        <item>Deciliters [dL]</item>
        <item>Fluid Ounces (UK) [fl oz]</item>
        <item>Fluid Ounces (US) [fl oz]</item>
        <item>Gallons (UK) [gal]</item>
        <item>Gallons (US)</item>
        <item>Liters [L]</item>
        <item>Milliliters [mL]</item>
        <item>Pints (UK) [pt]</item>
        <item>Pints (US) [pt]</item>
        <item>Quarts (UK) [qt]</item>
        <item>Quarts (US) [qt]</item>
        <item>Tablespoons (US)</item>
        <item>Tablespoons (Metric)</item>
        <item>Tablespoons (Imperial)</item>
        <item>Teaspoons (US)</item>
        <item>Teaspoons (Metric)</item>
        <item>Teaspoons (Imperial)</item>
    </string-array>
    <string name="result">Result: %s</string>
</resources>